# matlab-mcp-server

./: .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  install-matlab-mcp.sh  pyproject.toml
examples/: README.md  advanced_test.py  basic_test.py  essentials_demo.py  quick_shared_session.py  real_world_tests.m  real_world_tests.py  shared_session_demo.py  simple_gui_test.py  test_enhanced_engine.py  test_script.m  test_shared_sessions.py
md-files/: MATLAB_MCP_GUIDE.md  MCP_CLIENT_SETUP.md  PLANNING.md  RESOURCES.md  TESTING.md  TOOLS.md  USERSTORY.md
scripts/: README.md  check_sessions.py  demo_in_your_matlab.py  python_creates_gui_session.py  quick_gui_test.py  run_tests.py  run_tests.sh  setup_current_matlab.py  setup_matlab_env.py  start_gui.py  start_gui_session.py  start_matlab_gui.py
src/matlab_mcp_server/: __init__.py  cli.py  engine.py  resources.py  server.py  tools.py
tests/: __init__.py  test_engine.py  test_server.py
